# VisageDvachevsky-nvmdnv

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  imgui.ini
compiler/: CMakeLists.txt
compiler/src/: main.cpp
editor/: CMakeLists.txt
editor/include/NovelMind/editor/: asset_pipeline.hpp  asset_preview.hpp  build_size_analyzer.hpp  build_system.hpp  crash_safety.hpp  curve_editor.hpp  editor_runtime_host.hpp  editor_settings.hpp  editor_state.hpp  error_reporter.hpp  event_bus.hpp  hotkeys_manager.hpp  inspector_binding.hpp  project_integrity.hpp  project_manager.hpp  scene_document.hpp  script_reference_map.hpp  selection_system.hpp  timeline_editor.hpp  timeline_playback.hpp  undo_system.hpp  voice_manager.hpp
editor/resources/: editor_resources.qrc
editor/src/: asset_pipeline.cpp  asset_preview.cpp  curve_editor.cpp  curve_editor_library.cpp  curve_editor_view.cpp  editor_runtime_host.cpp  editor_runtime_host_breakpoints.cpp  editor_runtime_host_detail.cpp  editor_runtime_host_detail.hpp  editor_runtime_host_hot_reload.cpp  editor_runtime_host_inspection.cpp  editor_runtime_host_runtime.cpp  editor_runtime_host_save.cpp  editor_settings.cpp  editor_state.cpp  error_reporter.cpp  event_bus.cpp  hotkeys_manager.cpp  inspector_binding.cpp  project_integrity.cpp  project_manager.cpp  scene_document.cpp  selection_system.cpp  timeline_editor.cpp  timeline_playback.cpp  voice_manager.cpp
editor/src/qt/: lazy_thumbnail_loader.cpp  main.cpp  navigation_location.cpp  nm_color_dialog.cpp  nm_dialogs_detail.cpp  nm_dialogs_detail.hpp  nm_dock_panel.cpp  nm_file_dialog.cpp  nm_hotkeys_dialog.cpp  nm_icon_manager.cpp  nm_input_dialog.cpp  nm_main_window.cpp  nm_main_window_connections.cpp  nm_main_window_layout.cpp  nm_main_window_menu.cpp  nm_main_window_panels.cpp  nm_main_window_runtime.cpp  nm_message_dialog.cpp  nm_new_project_dialog.cpp  nm_play_mode_controller.cpp  nm_style_manager.cpp  nm_style_manager_stylesheet.cpp  nm_undo_manager.cpp  nm_welcome_dialog.cpp  performance_metrics.cpp  qt_event_bus.cpp  qt_selection_manager.cpp  timeline_render_cache.cpp
editor/src/qt/panels/: nm_animation_adapter.cpp  nm_asset_browser_panel.cpp  nm_build_settings_panel.cpp  nm_console_panel.cpp  nm_curve_editor_panel.cpp  nm_curve_point_item.cpp  nm_debug_overlay_panel.cpp  nm_diagnostics_panel.cpp  nm_hierarchy_panel.cpp  nm_inspector_panel.cpp  nm_inspector_panel_group.cpp  nm_issues_panel.cpp  nm_keyframe_item.cpp  nm_localization_panel.cpp  nm_play_toolbar_panel.cpp  nm_project_settings_panel.cpp  nm_scene_palette_panel.cpp  nm_scene_view_gizmo.cpp  nm_scene_view_object.cpp  nm_scene_view_overlays.hpp  nm_scene_view_panel.cpp  nm_scene_view_panel_document.cpp  nm_scene_view_panel_objects.cpp  nm_scene_view_panel_runtime.cpp  nm_scene_view_panel_ui.cpp  nm_scene_view_scene.cpp  nm_scene_view_view.cpp  nm_script_doc_panel.cpp  nm_script_editor_panel.cpp  nm_script_editor_panel_detail.cpp  nm_script_editor_panel_detail.hpp  nm_script_editor_panel_editor.cpp  nm_story_graph_connection.cpp  nm_story_graph_minimap.cpp  nm_story_graph_node.cpp  nm_story_graph_panel.cpp  nm_story_graph_panel_detail.cpp  nm_story_graph_panel_detail.hpp  nm_story_graph_panel_handlers.cpp  nm_story_graph_scene.cpp  (+3 more)
editor/templates/: project.gitignore
editor/templates/branching_story/: project.json
editor/templates/branching_story/scripts/: main.nms
editor/templates/empty_project/: project.json
editor/templates/empty_project/scripts/: main.nms
editor/templates/kinetic_novel/: project.json
editor/templates/kinetic_novel/scripts/: main.nms
engine_core/: CMakeLists.txt
engine_core/include/NovelMind/audio/: audio_manager.hpp
engine_core/include/NovelMind/core/: application.hpp  assert.hpp  debug_overlay.hpp  logger.hpp  profiler.hpp  property_system.hpp  result.hpp  (+2 more)
engine_core/src/audio/: audio_manager.cpp  miniaudio_impl.cpp
engine_core/src/core/: application.cpp  debug_overlay.cpp  file_system.cpp  logger.cpp  platform_sdl.cpp  profiler.cpp  property_system.cpp  timer.cpp
engine_core/src/input/: input_manager.cpp
engine_core/src/localization/: localization_manager.cpp
engine_core/src/renderer/: camera.cpp  font.cpp  renderer.cpp  sprite.cpp  text_layout.cpp  texture.cpp
engine_core/src/resource/: resource_manager.cpp
engine_core/src/save/: save_manager.cpp
engine_core/src/scene/: character_sprite.cpp  choice_menu.cpp  dialogue_box.cpp  scene_graph.cpp  scene_graph_detail.cpp  scene_graph_detail.hpp  scene_inspector.cpp  scene_layer.cpp  scene_manager.cpp  scene_object.cpp  scene_object_background.cpp  scene_object_base.cpp  scene_object_character.cpp  scene_object_choice.cpp  scene_object_dialogue.cpp  scene_object_effect.cpp  scene_object_handle.cpp  scene_object_properties.cpp  transition.cpp
engine_core/src/scripting/: compiler.cpp  interpreter.cpp  ir_conversion.cpp  ir_core.cpp  ir_round_trip.cpp  ir_visual_graph.cpp  lexer.cpp  parser.cpp  script_runtime.cpp  validator.cpp  vm.cpp  vm_security.cpp
engine_core/src/ui/: ui_containers.cpp  ui_controls.cpp  ui_manager.cpp  ui_theme.cpp  ui_widget.cpp
engine_core/src/vfs/: cached_file_system.cpp  file_handle.cpp  file_system_backend.cpp  memory_fs.cpp  multi_pack_manager.cpp  pack_decryptor.cpp  pack_integrity_checker.cpp  pack_reader.cpp  pack_security.cpp  pack_security_detail.cpp  pack_security_detail.hpp  resource_cache.cpp  resource_id.cpp  secure_pack_reader.cpp  virtual_file_system.cpp  virtual_fs.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tests/: CMakeLists.txt  multi_object_editing_test.cpp  scene_object_properties_test.cpp
tests/integration/: test_animation_integration.cpp  test_asset_browser.cpp  test_editor_runtime.cpp  test_editor_settings.cpp  test_voice_manager.cpp
tests/unit/: test_animation.cpp  test_fuzzing.cpp  test_lexer.cpp  test_memory_fs.cpp  test_parser.cpp  test_performance_cache.cpp  test_result.cpp  test_snapshot.cpp  test_story_graph.cpp  test_texture_loading.cpp  test_timer.cpp  test_validator.cpp  test_value.cpp  test_vm.cpp  test_vm_vn.cpp
(+138 files in other folders)
